@@ -2,11 +2,15 @@
 
 	* examples/io.c (write_file): Use write_string.
 
-	* examples/Makefile.in (base64enc): New target. Also added missing
-	io.o dependency to several other targets.
+	* examples/Makefile.in (base64enc): New targets. Also
+	added missing io.o dependency to several other targets.
+	(base64dec, base16enc, base16dec): Likewise.
 
 	* examples/base64enc.c: New file, based on example code
 	contributed by Jeronimo Pellegrini.
+	* examples/base64dec.c: Likewise.
+	* examples/base16enc.c: Likewise.
+	* examples/base16dec.c: Likewise.
 
 	* examples/rsa-encrypt.c (process_file): Reorganized fread loop.
 	(usage): New function.
